some more code for image correction